test/03-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-public
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
#    kubernetes.io/ingress.class: nginx-public
spec:
  ingressClassName: nginx-public
  rules:
  - host: "hellov2.apic.lab"
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-v2-svc
            port: 
              number: 80
